<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="com.jvsl.androidcountryflags.MainActivity">

    <ImageView
        android:contentDescription="@string/flag"
        android:id="@+id/img_flag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/flag_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/txt_flag"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="ADD"
        android:id="@+id/btn_add_flag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>
